Fixed alignment for center to work

--- a/src/blocks/eics-icon/src/eics-icon/style.scss
+++ b/src/blocks/eics-icon/src/eics-icon/style.scss
@@ -9,3 +9,17 @@
 	color: inherit !important;
 	fill: currentColor !important;
 }
+
+.wp-block-easy-symbols-icons-eics-symbols-icons.alignleft {
+  float: none;
+  text-align: left;
+  margin-inline-end: 0;
+}
+.wp-block-easy-symbols-icons-eics-symbols-icons.alignright {
+  float: none;
+  text-align: right;
+  margin-inline-start: 0;
+}
+.wp-block-easy-symbols-icons-eics-symbols-icons.aligncenter {
+  text-align: center;
+}
